--- a/shippable.yml
+++ b/shippable.yml
@@ -8,12 +8,13 @@ branches:
 env:
   global:
     - APP_NAME=sample-node-ayeaye
-  # matrix:
-  #   - TEST_1=test_1.sh
-  #   - TEST_2=test_2.sh
-  #   - TEST_3=test_3.sh
-  #   - TEST_4=test_4.sh
-  #   - TEST_5=test_5.sh
+  # expose to run tests in parallel via matrix build
+  matrix:
+    - TEST_1=test_1.sh
+    - TEST_2=test_2.sh
+    - TEST_3=test_3.sh
+    - TEST_4=test_4.sh
+    - TEST_5=test_5.sh
 
 build:
   ci:
