add mocha tests

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "node",
     "heroku",
     "express"
-  ]
+  ],
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-http": "^1.0.0"
+  }
 }
