--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   ],
   "devDependencies": {
     "chai": "^3.2.0",
-    "chai-http": "^1.0.0"
+    "chai-http": "^1.0.0",
+    "mocha": "^3.2.0",
+    "mocha-junit-reporter": "^1.13.0",
+    "xunit-file": "^1.0.0"
   }
 }
