--- a/shippable.yml
+++ b/shippable.yml
@@ -8,6 +8,8 @@ branches:
 env:
   global:
     - APP_NAME=sample-node-ayeaye
+    - TEST_RESULTS_DIR=shippable/testresults
+    - CODE_COVERAGE_DIR=shippable/testresults
   # expose to run tests in parallel via matrix build
   matrix:
     - TEST_1=test_1.sh
@@ -20,6 +22,7 @@ build:
   ci:
     - echo 'CI is running'
     - npm install -g mocha@2.3.1 && npm install
+    - mkdir -p $TEST_RESULTS_DIR && mkdir -p $CODE_COVERAGE_DIR
     # # run tests in sequence (single build)
     # - for file in ./tests/*; do ./$file; done
     # run tests in parallel (matrix builds)
