--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-http": "^1.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0",
     "xunit-file": "^1.0.0"
