--- a/shippable.yml
+++ b/shippable.yml
@@ -21,7 +21,7 @@ env:
 build:
   ci:
     - echo 'CI is running'
-    - npm install -g mocha instanbul && npm install
+    - npm install -g mocha istanbul && npm install
     - mkdir -p $TEST_RESULTS_DIR && mkdir -p $CODE_COVERAGE_DIR
     # # run tests in sequence (single build)
     # - for file in ./tests/*; do ./$file; done
