--- a/shippable.yml
+++ b/shippable.yml
@@ -23,11 +23,11 @@ build:
     - echo 'CI is running'
     - npm install -g mocha istanbul && npm install
     - mkdir -p $TEST_RESULTS_DIR && mkdir -p $CODE_COVERAGE_DIR
-    # # run tests in sequence (single build)
-    # - for file in ./tests/*; do ./$file; done
-    # run tests in parallel (matrix builds)
-    - tmp=TEST_$SHIPPABLE_JOB_NUMBER && export TEST_TO_RUN=${!tmp}
-    - ./test/$TEST_TO_RUN
+    # run tests in sequence (single build)
+    - for file in ./test/*.sh; do ./$file; done
+    # # run tests in parallel (matrix builds)
+    # - tmp=TEST_$SHIPPABLE_JOB_NUMBER && export TEST_TO_RUN=${!tmp}
+    # - ./test/$TEST_TO_RUN
   post_ci:
     - git push -f git@heroku.com:$APP_NAME.git master
 
