--- a/shippable.yml
+++ b/shippable.yml
@@ -10,24 +10,24 @@ env:
     - APP_NAME=sample-node-ayeaye
     - TEST_RESULTS_DIR=shippable/testresults
     - CODE_COVERAGE_DIR=shippable/codecoverage
-  # # expose to run tests in parallel via matrix build
-  # matrix:
-  #   - TEST_1=test_1.sh
-  #   - TEST_2=test_2.sh
-  #   - TEST_3=test_3.sh
-  #   - TEST_4=test_4.sh
-  #   - TEST_5=test_5.sh
+  # expose to run tests in parallel via matrix build
+  matrix:
+    - TEST_1=test_1.sh
+    - TEST_2=test_2.sh
+    - TEST_3=test_3.sh
+    - TEST_4=test_4.sh
+    - TEST_5=test_5.sh
 
 build:
   ci:
     - echo 'CI is running'
     - npm install -g mocha istanbul && npm install
     - mkdir -p $TEST_RESULTS_DIR && mkdir -p $CODE_COVERAGE_DIR
-    # run tests in sequence (single build)
-    - for file in ./test/*.sh; do ./$file; done
-    # # run tests in parallel (matrix builds) using env:matrix values above
-    # - tmp=TEST_$SHIPPABLE_JOB_NUMBER && export TEST_TO_RUN=${!tmp}
-    # - ./test/$TEST_TO_RUN
+    # # run tests in sequence (single build)
+    # - for file in ./test/*.sh; do ./$file; done
+    # run tests in parallel (matrix builds) using env:matrix values above
+    - tmp=TEST_$SHIPPABLE_JOB_NUMBER && export TEST_TO_RUN=${!tmp}
+    - ./test/$TEST_TO_RUN
   post_ci:
     - git push -f git@heroku.com:$APP_NAME.git master
 
