--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -6,75 +6,26 @@ jobs:
 
 # add pipeline workflow
 
-# manifest gen
-  - name: man-sample
-    type: manifest
+# TEST deployment to Heroku
+  - name: heroku-deploy-test-sample
+    type: runSh
     steps:
-      - IN: img-sample
-        versionName: master.87
-      - IN: img-opts-sample
-      - TASK: managed
-
-# TEST deployment to Amazon ECS
-  - name: ecs-deploy-test-sample
-    type: deploy
-    steps:
-      - IN: man-sample
+      - IN: int-heroku
       - IN: params-sample-test
-      - IN: env-test-ecs
-      - IN: trigger-sample-test
-      - IN: alb-demo-test
-        applyTo:
-          - manifest: man-sample
-            image: img-sample
-            port: 80
-      - TASK: managed
+      - IN: repo-sample
+      - TASK:
+        - script: . /build/IN/repo-sample/gitRepo/provInfra.sh repo-sample params-sample-test int-heroku
+        - script: git remote add test git@heroku.com:sample-node-ayeaye-test.git
+        - script: git push test master
 
-# Create release for PROD
-  - name: release-sample
-    type: release
+# TEST deployment to Heroku
+  - name: heroku-deploy-prod-sample
+    type: runSh
     steps:
-      - IN: ver-sample
-        switch: off
-      - IN: ecs-deploy-test-sample
-        switch: off
-      - IN: trigger-release-prod
-      - TASK:   managed
-        bump: patch
-
-# PROD deployment to Amazon ECS
-  - name: ecs-deploy-prod-sample
-    type: deploy
-    steps:
-      - IN: release-sample
-        switch: off
-        # versionName: v1.0.1
+      - IN: int-heroku
       - IN: params-sample-prod
-      - IN: trigger-sample-prod
-      - IN: replicas-sample-prod
-      - IN: alb-demo-prod
-        applyTo:
-          - manifest: man-sample
-            image: img-sample
-            port: 80
-      - IN: env-test-ecs
-      - TASK: managed
-
-#################################
-
-# manifest gen
-  - name: man-sample-triton
-    type: manifest
-    steps:
-      - IN: img-sample
-      - IN: img-opts-sample-triton
-      - TASK: managed
-
-# TEST deployment for VISUALIZER to Joyent Triton
-  - name: test-triton-sample
-    type: deploy
-    steps:
-      - IN: man-sample-triton
-      - IN: trigger-sample-test
-      - IN: env-test-triton
-      - TASK: managed
+      - IN: repo-sample
+      - TASK:
+        - script: . /build/IN/repo-sample/gitRepo/provInfra.sh repo-sample params-sample-prod int-heroku
+        - script: git remote add test git@heroku.com:sample-node-ayeaye-test.git
+        - script: git push test master
